syntax = "proto3";
package userpb;

option go_package = "proto/userpb";

message UserCreated {
  string id = 1;
  string email = 2;
  string name = 3;
  int64 created_at = 4; // Unix timestamp (seconds)
}